fixed minor song component layout issue

--- a/client/src/app/features/controller-view/components/songs/songs.component.scss
+++ b/client/src/app/features/controller-view/components/songs/songs.component.scss
@@ -25,7 +25,7 @@
 
 .songs-container,
 .bible-passage-container {
-    height: 40vh;
+    height: 38vh;
     display: flex;
     flex-direction: column;
     overflow-y: auto;
